# dlinfer

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Contributors.md  README.md  pyproject.toml  requirements.txt  run_format.sh  setup.py
.claude/skills/ascend-nv-timeline-compare/: SKILL.md
.claude/skills/ascend-timeline/: SKILL.md
.claude/skills/lmdeploy-service-launch/: SKILL.md
.claude/skills/op-callchain/: SKILL.md
.claude/skills/restful-pressure-benchmark/: SKILL.md
.github/: CODEOWNERS
.github/ci/: fix-exit-multi-npu.patch
.github/skills/: en
.github/workflows/: format.yaml  main.yaml  main.yml
allure-results/: 0cb8e2c3-5a49-4972-893f-4996da4b9ab3-attachment.txt  3f1d54d5-c82f-4da7-8292-4f22cb48e227-attachment.txt  65f1920e-3abb-4b23-abd6-04316fa9e382-attachment.txt  95c49c2c-4104-4a43-979a-738d5b814bde-attachment.txt  a35ff9f2-439d-4697-a079-57df713fc005-container.json  aa55e572-fd6d-487c-a847-ede7f3a6a2ab-container.json  b603debf-a96f-4bd6-a1f8-b1cd70b4e438-attachment.txt  ce64a25a-dcc9-4142-8fd3-b8057c28c214-attachment.txt  dd9afc05-366d-4110-bd8f-2287870afc6e-attachment.txt  eeada9e5-cd49-4857-be07-e4f184e25cbf-container.json  f4124b2d-8611-4e26-8ebe-538bf6bfbde1-result.json  faee7952-9852-4ce9-9789-847a97d5ee4d-attachment.txt
benchmark/: profile_generation.py  profile_restful_api.py
cmake/: FindATB.cmake  FindCANNToolkit.cmake  FindHccl.cmake  FindTorch_npu.cmake  ascend.cmake
dlinfer/: __init__.py
dlinfer/framework/lmdeploy_ext/: __init__.py  ascend.py
dlinfer/framework/torch_npu_ext/: __init__.py  aclgraph.py
dlinfer/framework/transformers_ext/: __init__.py  cogvlm.py  cogvlm_ascend.py  internlm2.py  internvl.py  patch.py
dlinfer/graph/: __init__.py  custom_op.py
dlinfer/graph/ascend_piecewise/: __init__.py  acl_graph_wrapper.py  ascend_piecewise_runner.py  bucket_utils.py  eager_wrapper.py  graph_capture_session.py  graph_splitter.py  piecewise_backend.py  utils.py
dlinfer/graph/compilation/: __init__.py  acl_graph_wrapper.py  ascend_piecewise_runner.py  eager_wrapper.py  graph_splitter.py  piecewise_backend.py
dlinfer/ops/: __init__.py  llm.py  piecewise_llm.py  piecewise_llm_simple.py  piecewise_wrappers.py
dlinfer/pytorch_patch/: __init__.py  device_proxy.py  distributed.py
dlinfer/utils/: __init__.py  config.py  registry.py  type_annotation.py
dlinfer/utils/graph/: custom_op.py
docs/: ascend_multinodes.md  ascend_ray_npu_resource_patch.md  triton_ascend_kernels_installation.md
docs/quant/: ascend_kv_quant.md  ascend_scales_offsets.py
infer_ext/: __init__.py
infer_ext/framework/lmdeploy_ext/: __init__.py
infer_ext/framework/transformers_ext/: __init__.py  (+2 more)
infer_ext/framework_patch/: __init__.py
infer_ext/ops/: llm.py
infer_ext/pytorch_patch/: __init__.py  device_proxy.py  distributed.py
infer_ext/utils/: type_annotation.py
requirements/ascend/: build.txt  cann.txt  runtime.txt  torch.txt
requirements/camb/: build.txt  full.txt  runtime.txt  torch.txt
requirements/ix/: build.txt
requirements/maca/: build.txt  full.txt  runtime.txt  torch.txt
requirements/ppu/: build.txt
scripts/: build_wheel.sh  build_wheel_allpy.sh  local_test.sh
tests/: __init__.py  config.yaml  conftest.py  prompt_case.yaml  readme.md  test_moe_gating_topk_softmax.py
tests/ci_utils/: config_utils.py  get_run_config.py  pipeline_chat.py  rule_condition_assert.py
tests/e2e/: config.yaml  conftest.py  test_model_1tp.py  test_model_tp1.py  test_model_tp2.py  test_pipeline_chat_pytorch.py
tests/fused_ops/: test_moe_gating_topk_softmax.py
tests/utils/: config_utils.py  get_run_config.py  pipeline_chat.py  rule_condition_assert.py
(+64 files in other folders)
